<?xml version="1.0" encoding="UTF-8"?>

    <menu tools:showIn="navigation_view" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">


  <group android:checkableBehavior="single">

  <item android:title="@string/menu_home"
      android:icon="@drawable/ic_menu_home"
      android:id="@+id/nav_home"/>

  <item android:title="@string/menu_profile"
      android:icon="@drawable/ic_menu_profile"
      android:id="@+id/nav_profile"/>

  <item android:title="@string/menu_about" android:icon="@drawable/ic_menu_about" android:id="@+id/nav_about"/>

  <item android:title="@string/menu_rate" android:icon="@drawable/ic_menu_rate" android:id="@+id/nav_rate"/>

  <item android:title="@string/menu_share" android:icon="@drawable/ic_share_black_24dp" android:id="@+id/nav_share"/>

  <item android:title="@string/menu_invite" android:icon="@drawable/ic_logout" android:id="@+id/nav_logout"/>

</group>

</menu>